--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="service-container">
             <h3 class="middle">Das leiste ich für dich</h3>
             <div class="moreContentOver" id="container">
-                <div class="overlay"></div>
+                <!-- <div class="overlay"></div> -->
                 <div class="services moreContent"  id="moreContent">
                     <div class="service-d service-card">
                         <div class="icon"><i class="fas fa-palette"></i></div>
