back to vertical

--- a/index.html
+++ b/index.html
@@ -126,41 +126,8 @@
 
     <div class="triggerLogo"></div>
     <div class="triggerCta"></div>
-    <div class="fdContainer">
-        
-    </div>
-    <div class="btn-container">
-        <div class="cta">
-            <svg id="hero-cta-svg" viewBox="0 0 356 118" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_i)">
-                    <rect width="356" height="118" rx="22" fill="white" />
-                </g>
-                <path
-                    d="M129.568 50.816V80H120.736V34.56H127.776L151.264 64.512V34.624H160.096V80H152.736L129.568 50.816ZM203.533 42.304H189.005V80H180.237V42.304H165.709V34.56H203.533V42.304Z"
-                    fill="#1D71B8" />
-                <path
-                    d="M221.088 34.56H230.048L246.752 80H237.664L233.44 68.672H217.568L213.408 80H204.32L221.088 34.56ZM231.84 62.464L225.568 43.712L219.04 62.464H231.84ZM251.736 80V34.624H260.568V56.192L279.64 34.56H289.368L271.96 54.72L290.456 80H280.472L266.328 60.416L260.568 66.432V80H251.736ZM328.533 42.304H314.005V80H305.237V42.304H290.709V34.56H328.533V42.304Z"
-                    fill="#006494" />
-                <path
-                    d="M31.736 80V34.624H40.568V56.192L59.64 34.56H69.368L51.96 54.72L70.456 80H60.472L46.328 60.416L40.568 66.432V80H31.736ZM91.3155 80.32C87.9875 80.32 84.9582 79.68 82.2275 78.4C79.5395 77.12 77.2142 75.392 75.2515 73.216C73.3315 70.9973 71.8382 68.5227 70.7715 65.792C69.7048 63.0187 69.1715 60.1813 69.1715 57.28C69.1715 54.2507 69.7262 51.3707 70.8355 48.64C71.9448 45.8667 73.5022 43.4133 75.5075 41.28C77.5128 39.104 79.8595 37.3973 82.5475 36.16C85.2782 34.88 88.2648 34.24 91.5075 34.24C94.7928 34.24 97.7795 34.9013 100.468 36.224C103.198 37.5467 105.524 39.3173 107.444 41.536C109.406 43.7547 110.9 46.2507 111.924 49.024C112.99 51.7547 113.524 54.5493 113.524 57.408C113.524 60.3947 112.969 63.2747 111.86 66.048C110.75 68.7787 109.193 71.232 107.188 73.408C105.225 75.5413 102.878 77.2267 100.148 78.464C97.4595 79.7013 94.5155 80.32 91.3155 80.32ZM78.1315 57.28C78.1315 59.9253 78.6435 62.4 79.6675 64.704C80.7342 67.008 82.2488 68.8853 84.2115 70.336C86.2168 71.7867 88.6062 72.512 91.3795 72.512C94.2382 72.512 96.6488 71.7653 98.6115 70.272C100.574 68.7787 102.068 66.8587 103.092 64.512C104.116 62.1653 104.628 59.7547 104.628 57.28C104.628 54.6347 104.094 52.16 103.028 49.856C101.961 47.552 100.425 45.696 98.4195 44.288C96.4568 42.8373 94.1102 42.112 91.3795 42.112C88.5208 42.112 86.1102 42.8587 84.1475 44.352C82.1848 45.8453 80.6915 47.7653 79.6675 50.112C78.6435 52.416 78.1315 54.8053 78.1315 57.28Z"
-                    fill="#36A9E1" />
-                <defs>
-                    <filter id="filter0_i" x="0" y="0" width="356" height="122" filterUnits="userSpaceOnUse"
-                        color-interpolation-filters="sRGB">
-                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                        <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                            result="hardAlpha" />
-                        <feOffset dy="4" />
-                        <feGaussianBlur stdDeviation="2" />
-                        <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
-                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-                        <feBlend mode="normal" in2="shape" result="effect1_innerShadow" />
-                    </filter>
-                </defs>
-            </svg>
-        </div>
-    </div>
+
+
 </section>
 <section class="hero">
     <div class="triggerFd"></div>
@@ -285,12 +252,12 @@
 
 
 
-<section class="service">
+<!-- <section class="service">
 
     <div class="service-container">
         <h3 class="middle">Das leiste ich für dich</h3>
         <div class="moreContentOver" id="container">
-            <!-- <div class="overlay"></div> -->
+         
             <div class="services moreContent" id="moreContent">
 
                 <div class="service-card">
@@ -996,8 +963,132 @@
         </div>
         <div class="more">Genauer</div>
     </div>
-</section>
+</section> -->
+<section class="service">
+  <div class="service-background"></div>
+  <div class="service-container">
+      <h3 class="middle">Das leiste ich für dich</h3>
+      <div class="moreContentOver" id="container">
+          <!-- <div class="overlay"></div> -->
+          <div class="services moreContent"  id="moreContent">
+              <div class="service-d service-card">
+                  <div class="icon"><i class="fas fa-palette"></i></div>
+                  <span class="service-title">Individuelles Design oder Adaption</span>
+                  <div class="extended-content">
+                      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                          invidunt
+                          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                          justo
+                          duo
+                          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                          dolor
+                          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                          eirmod
+                          tempor
+                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                          accusam
+                          et
+                          justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                          Lorem
+                          ipsum dolor sit amet.</p>
+                  </div>
 
+              </div>
+              <div class="service-fs service-card">
+                  <div class="icon"><i class="fas fa-tools"></i></div>
+                  <span class="service-title">Full Service Integration und Maintenance</span>
+                  <div class="extended-content">
+                      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                          invidunt
+                          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                          justo
+                          duo
+                          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                          dolor
+                          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                          eirmod
+                          tempor
+                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                          accusam
+                          et
+                          justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                          Lorem
+                          ipsum dolor sit amet.</p>
+                  </div>
+              </div>
+              <div class="service-os service-card">
+                  <div class="icon"><i class="fas fa-shopping-cart"></i></div>
+                  <span class="service-title"> Online Shop Installment</span>
+                  <div class="extended-content">
+                      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                          invidunt
+                          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                          justo
+                          duo
+                          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                          dolor
+                          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                          eirmod
+                          tempor
+                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                          accusam
+                          et
+                          justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                          Lorem
+                          ipsum dolor sit amet.</p>
+                  </div>
+              </div>
+              <div class="service-seo service-card">
+                  <div class="icon"><i class="fab fa-google"></i></div>
+                  <span class="service-title">SEO</span>
+                  <div class="extended-content">
+                      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                          invidunt
+                          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                          justo
+                          duo
+                          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                          dolor
+                          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                          eirmod
+                          tempor
+                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                          accusam
+                          et
+                          justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                          Lorem
+                          ipsum dolor sit amet.
+                      </p>
+                  </div>
+              </div>
+              <div class="service-dev service-card">
+                  <div class="icon"><i class="fas fa-code"></i></div>
+                  <span class="service-title">Development</span>
+                  <div class="extended-content">
+                      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                          invidunt
+                          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                          justo
+                          duo
+                          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+                          dolor
+                          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                          eirmod
+                          tempor
+                          invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                          accusam
+                          et
+                          justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                          Lorem
+                          ipsum dolor sit amet.
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="more">Genauer</div>
+  </div>
+</section>
 <section class="welcomeText">
     <div class="welcomeContainer">
         <div class="welcomeTextElem text">
