--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,900;1,300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -965,15 +965,16 @@
     </div>
 </section> -->
 <section class="service">
-  <div class="service-background"></div>
+  
   <div class="service-container">
       <h3 class="middle">Das leiste ich für dich</h3>
       <div class="moreContentOver" id="container">
           <!-- <div class="overlay"></div> -->
           <div class="services moreContent"  id="moreContent">
               <div class="service-d service-card">
+                <div class="service-background"></div>
                   <div class="icon"><i class="fas fa-palette"></i></div>
-                  <span class="service-title">Individuelles Design oder Adaption</span>
+                  <span class="service-title">Individuelles&nbsp;Design&nbsp;oder&nbsp;Adaption</span>
                   <div class="extended-content">
                       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                           invidunt
@@ -995,6 +996,7 @@
 
               </div>
               <div class="service-fs service-card">
+                <div class="service-background"></div>
                   <div class="icon"><i class="fas fa-tools"></i></div>
                   <span class="service-title">Full Service Integration und Maintenance</span>
                   <div class="extended-content">
@@ -1017,6 +1019,7 @@
                   </div>
               </div>
               <div class="service-os service-card">
+                <div class="service-background"></div>
                   <div class="icon"><i class="fas fa-shopping-cart"></i></div>
                   <span class="service-title"> Online Shop Installment</span>
                   <div class="extended-content">
@@ -1039,6 +1042,7 @@
                   </div>
               </div>
               <div class="service-seo service-card">
+                <div class="service-background"></div>
                   <div class="icon"><i class="fab fa-google"></i></div>
                   <span class="service-title">SEO</span>
                   <div class="extended-content">
@@ -1062,6 +1066,7 @@
                   </div>
               </div>
               <div class="service-dev service-card">
+                <div class="service-background"></div>
                   <div class="icon"><i class="fas fa-code"></i></div>
                   <span class="service-title">Development</span>
                   <div class="extended-content">
@@ -1206,6 +1211,7 @@
 <script src="libs/gsap/minified/Flip.min.js" crossorigin="anonymous"></script>
 <script src="libs/gsap/minified/MorphSVGPlugin.min.js" crossorigin="anonymous"></script>
 <script src="libs/gsap/minified/DrawSVGPlugin.min.js" crossorigin="anonymous"></script>
+<script src="libs/gsap/minified/SplitText.min.js" crossorigin="anonymous"></script>
 
 
 <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript">
