--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-
+<body>
 
 
 <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<main>
+
   <header>
     <div class="logo-header">
     </div>
@@ -60,7 +60,7 @@
 
     </div>
   </header>
-
+  <main id="main">
   <svg xmlns="http://www.w3.org/2000/svg" id="fd" class="fd" viewBox="0 0 753.39 95.3">
     <g class="fd-friede">
       <path class="fd-friede-f"
@@ -1117,10 +1117,11 @@
       </div>
     </div>
   </section>
-  <footer>
-    Friederike Kröger
-  </footer>
+ 
 </main>
+<footer>
+  Friederike Kröger
+</footer>
 <svg xmlns="http://www.w3.org/2000/svg">
   <symbol id="logo-use" viewBox="0 0 753.39 95.3">
     <g class="fd-friede">
