body id für overwrite

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="styles/card.css">
 </head>
 
-<body>
+<body id="friedevelopment">
 
   <svg xmlns="http://www.w3.org/2000/svg" id="fd" class="fd" viewBox="0 0 753.39 95.3">
     <g class="fd-friede">
