--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <main id="main">
 
       <div class="scroll">scroll</div>
-      <div class="hero-lass hero-text " data-depth='2'>Lass</div>
-      <div class="hero-deine hero-text " data-depth='5'>deine nächste Webseite bauen!</div>
-      <div class="hero-kontakt" data-depth='3'>
+      <div class="hero-lass hero-text " data-depth='2' data-vdepth="1">Lass</div>
+      <div class="hero-deine hero-text " data-depth='2.1' data-vdepth="1">deine nächste Webseite bauen!</div>
+      <div class="hero-kontakt" data-depth='3' data-vdepth="0">
         <div class="button">
           <div class="button-background"></div>
           <a href="#contact"> Direkt zum Kontakt</a>
