--- a/index.html
+++ b/index.html
@@ -89,8 +89,14 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div class="js-navigation">
-      <div class="cta-container">
+
+    <header>
+      <div class="logo-header">
+      </div>
+
+
+
+      <div class="cta-container js-navigation">
 
         <div class="header-cta cta-button"><a href="#contact">kontakt</a>
         </div>
@@ -99,21 +105,8 @@
           <i class="burger-close clickable fas fa-times main"></i>
         </div>
       </div>
-      <div class="go-up-container">
+      <div class="go-up-container js-navigation">
         <a href="#main" class="link"><i class=" fas fa-arrow-up"></i></a>
-      </div>
-    </div>
-    <header>
-      <div class="logo-header">
-      </div>
-
-
-      <div class="header-cta neon-button">
-        <a href="#contact">kontakt</a>
-        <div class="funnytext">
-        </div>
-        <div class="testfriede lightanim">FRIEDE</div>
-        <!-- <div class="testfreude lightanim">FREUDE</div> -->
       </div>
 
 
@@ -130,23 +123,30 @@
 
 
     <main id="main">
-
-      <div class="scroll">scroll</div>
-      <div class="hero-lass hero-text " data-depth='2' data-vdepth="1">Lass</div>
-      <div class="hero-deine hero-text " data-depth='2.5' data-vdepth="1">deine nächste Webseite bauen!</div>
-      <div class="hero-kontakt" data-depth='3' data-vdepth="0">
-        <div class="button">
-          <div class="button-background"></div>
-          <a href="#contact"> Direkt zum Kontakt</a>
-        </div>
-      </div>
-
-
-
-      <section class="frieDevelopment">
-
+      <section class="start" id="start">
+        <div class="scroll">scroll</div>
         <div class="triggerLogo"></div>
-        <div class="triggerCta"></div>
+
+
+        <div class="hero-lass hero-text " data-depth='1' data-vdepth="1">Lass</div>
+        <div class="fd-container"></div>
+        <div class="hero-deine hero-text " data-depth='4' data-vdepth="1">
+          <span>deine
+            nächste</span><wbr
+          <span>Webseite bauen!</span>
+        </div>
+        <div class="hero-kontakt" data-depth='1' data-vdepth="0">
+          <div class="button">
+            <div class="button-background"></div>
+            <a href="#contact"> Direkt zum Kontakt</a>
+          </div>
+        </div>
+
+
+      </section>
+      <div class="triggerCta"></div>
+
+      <!-- <section class="frieDevelopment"> -->
 
 
       </section>
