--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="triggerFd"></div>
         <div class="responsive">
 
-          <svg id="desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 767.37 656.77">
+          <svg id="desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 767.37 656.77" data-depth="2">
             <g>
               <path class="cls-1"
                 d="M747.78,0H19.58A19.58,19.58,0,0,0,0,19.59V513.32a19.61,19.61,0,0,0,19.58,19.59H318.11l-4.34,64.86A31.48,31.48,0,0,1,303.71,619l-30.35,27a6.16,6.16,0,0,0,4.05,10.77H490A6.15,6.15,0,0,0,494,646l-30.78-26.83a31.08,31.08,0,0,1-10.3-21.73l-3.72-64.48H747.78a19.62,19.62,0,0,0,19.59-19.59V19.59A19.59,19.59,0,0,0,747.78,0Zm-5,424.28H24.56V24.56H742.81Z" />
@@ -188,7 +188,7 @@
               </foreignObject>
             </g>
           </svg>
-          <svg id="laptop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500.9 283.23">
+          <svg id="laptop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500.9 283.23" data-depth="9">
 
             <g>
 
@@ -222,7 +222,7 @@
             </g>
 
           </svg>
-          <svg id="phone" class="portrait" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160.2 255.29">
+          <svg id="phone" class="portrait" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160.2 255.29" data-depth="2">
 
             <g>
               <path class="cls-1"
@@ -243,7 +243,8 @@
             </g>
 
           </svg>
-          <svg id="tablet" class="portrait" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.14 404.53">
+          <svg id="tablet" class="portrait" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.14 404.53"
+            data-depth="5">
 
             <g>
               <path class="cls-1"
