--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="hrT-ws middle">Webseiten</div>
                     <div class="hrT-sa dark">mit Spaß und Anspruch</div>
 
-                    <h3 class="middle">Das leiste ich für dich</h3>
+
                   </div>
                 </div>
                 <i class="fab fa-wordpress-simple wordpress parallax"></i>
@@ -214,7 +214,7 @@
                     <div class="hrT-ws middle">Webseiten</div>
                     <div class="hrT-sa dark">mit Spaß und Anspruch</div>
 
-                    <h3 class="middle">Das leiste ich für dich</h3>
+
                   </div>
                 </div>
                 <i class="fab fa-wordpress-simple wordpress parallax"></i>
@@ -237,7 +237,7 @@
                   <div class="hrT-ws middle">Webseiten</div>
                   <div class="hrT-sa dark">mit Spaß und Anspruch</div>
                   <i class="fab fa-wordpress-simple wordpress parallax"></i>
-                  <h3 class="middle">Das leiste ich für dich</h3>
+
                 </div>
               </foreignObject>
             </g>
@@ -266,7 +266,7 @@
                     <div class="hrT-ws middle">Webseiten</div>
                     <div class="hrT-sa dark">mit Spaß und Anspruch</div>
 
-                    <h3 class="middle">Das leiste ich für dich</h3>
+
                   </div>
                 </div>
                 <i class="fab fa-wordpress-simple wordpress parallax"></i>
@@ -289,7 +289,7 @@
       <section class="service" id="services">
 
         <div class="service-container">
-          <h3 class="middle">Das leiste ich für dich</h3>
+          <h2 class="middle">Das leiste ich für dich</h2>
           <div class="vertical-scroll-container tiles">
             <i class="details-close clickable fas fa-times"></i>
             <div class="services moreContent " id="all-services-conainer">
@@ -300,7 +300,9 @@
                 <div class="title-container">
                   <div class="icon"><i class="fas fa-palette"></i>
                   </div>
-                  <span class="title">Individuelles Design oder Adaption</span>
+                  <span class="title">
+                    <h3>Individuelles Design oder Adaption</h3>
+                  </span>
 
                 </div>
 
@@ -310,14 +312,6 @@
                     ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
                     justo
                     duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-                    dolor
-                    sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                    eirmod
-                    tempor
-                    invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                    accusam
-                    et
                     justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
                     Lorem
                     ipsum dolor sit amet.</p>
@@ -328,7 +322,9 @@
                 <div class="moving-background"></div>
                 <div class="title-container">
                   <div class="icon"><i class="fas fa-tools"></i></div>
-                  <span class="title">Full Service Integration und Maintenance</span>
+                  <span class="title">
+                    <h3>Full Service Integration und Maintenance</h3>
+                  </span>
                 </div>
                 <div class="extended-content">
 
@@ -354,7 +350,9 @@
                 <div class="moving-background"></div>
                 <div class="title-container">
                   <div class="icon"><i class="fas fa-shopping-cart"></i></div>
-                  <span class="title"> Online Shop Installment</span>
+                  <span class="title">
+                    <h3> Online Shop Installment</h3>
+                  </span>
                 </div>
                 <div class="extended-content">
 
@@ -373,6 +371,15 @@
                     et
                     justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
                     Lorem
+                    ipsum dolor sit amesit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                    nonumy
+                    eirmod
+                    tempor
+                    invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                    accusam
+                    et
+                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                    Lorem
                     ipsum dolor sit amet.</p>
                 </div>
               </div>
@@ -380,7 +387,9 @@
                 <div class="moving-background"></div>
                 <div class="title-container">
                   <div class="icon"><i class="fab fa-google"></i></div>
-                  <span class="title">SEO</span>
+                  <span class="title">
+                    <h3>SEO</h3>
+                  </span>
                 </div>
                 <div class="extended-content">
 
@@ -407,7 +416,9 @@
                 <div class="moving-background"></div>
                 <div class="title-container">
                   <div class="icon"><i class="fas fa-code"></i></div>
-                  <span class="title">Development</span>
+                  <span class="title">
+                    <h3>Development</h3>
+                  </span>
                 </div>
                 <div class="extended-content">
                   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
@@ -442,7 +453,7 @@
       <section class="welcomeText" id="welcomeText">
         <div class="welcomeContainer">
           <div class="welcomeTextElem text">
-            <h2>Freundliche Hilfe bei deinem Webauftritt</h2>
+            <h2>Friede Freude Eierkuchen</h2>
             <div class="tcontent">
               <p>
                 Wer sich mit dem Thema „Webseiten“ und “Webentwicklung” befasst, kommt an WordPress nicht
