--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
           <li class="menu-item leistungen"><a href="#services">Leistungen</a></li>
           <li class="menu-item erfahrungen"><a href="#">Erfahrungen</a></li>
           <li class="menu-item hintergruende"><a href="#">Hintergründe</a></li>
+          <li class="menu-item approcach"><a href="#approach">Vorgehensweise</a></li>
+          <li class="menu-item special-offer"><a href="#special-offer">Sonderangebot</a></li>
           <li class="menu-item technologien"><a href="#technologien">Technologien</a></li>
-          <li class="menu-item friede"><a href="#welcomeText">Friede</a></li>
+          <li class="menu-item friede"><a href="#friede">Friede</a></li>
         </ul>
       </nav>
     </header>
@@ -593,7 +595,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="friede">
         <h2 class="middle">Das bin ich</h2>
         <div class="pictures">
 
