--- a/index.html
+++ b/index.html
@@ -619,7 +619,12 @@
 
               <img src="images/DSC_0080_zoom.jpg">
             </div>
-
+            <div class="text">
+              <p><b>Friederike "Friede" Kröger</b><br>
+                Diplom-Wirtschaftsinformatikerin,<br>
+                Webentwicklerin seit 10 Jahren
+              </p>
+            </div>
             <div class="img">
 
               <img src="images/hamburg_2013_0856.jpg">
@@ -638,19 +643,40 @@
             </div>
             <div class="img-spacer"></div>
             <div class="text">
-              <h2>Friede Freude Eierkuchen</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, asperiores! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Odio quasi rerum qui voluptate! Corrurcitationem nihil dignissimos.</p>
+              <p>Mehrere Jahre Arbeiten an Microsoft .net Projekten in Angestelltenverhältnissen</p>
+
             </div>
+
+            <div class="img">
+
+              <img src="images/DSC_0080_zoom.jpg">
+            </div>
+            <div class="text">
+              <p></p>
+            </div>
+          </div>
+          <div class="line third">
 
             <div class="img">
 
               <img src="images/hamburg_2013_0868.JPG">
             </div>
+            <div class="img-spacer"></div>
+
+
+            <div class="img">
+
+              <img src="images/DSC_0080_zoom.jpg">
+            </div>
             <div class="text">
-              <h2>Friede Freude Eierkuchen</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, asperiores! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Odio quasi rerum qui voluptate! Corrurcitationem nihil dignissimos.</p>
+
+              <p>ingendwas inspiriereindenst</p>
+
+            </div>
+            <div class="img-spacer"></div>
+            <div class="img">
+
+              <img src="images/hamburg_2013_0856.jpg">
             </div>
           </div>
         </div>
